<?xml version="1.0" encoding="utf-8"?><!-- create by xin on 2022-3-28 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:contentDescription="@null"
            android:src="@mipmap/ic_launcher_round" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_avatar"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="@null"
                android:drawableStart="@drawable/ic_username"
                android:drawablePadding="10dp"
                android:hint="@string/hint_username"
                android:inputType="text" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="@null"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="10dp"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:maxLength="11" />

            <TextView
                android:id="@+id/tv_num_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="0/11"
                android:textSize="12sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <TextView
                    android:id="@+id/text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingEnd="15dp"
                    android:text="@string/text_sex"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:ignore="RtlSymmetry" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@id/text_view"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_mela"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/text_mela"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/text_female"
                        android:textColor="@color/black" />
                </RadioGroup>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_fav_lesson"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/cb_java"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_lesson_java"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/cb_android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_lesson_android"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/cb_english"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_lesson_english"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/cb_math"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_lesson_math"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/button_text" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>